--- a/ideas.html
+++ b/ideas.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="265"><a href="house-in-the-tree.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-1.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-1.png"></a>
                     <p class="gallery__title">House in the tree</p>
                     <p class="gallery__price"><strong>265$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="155"><a href="ship-in-a-bottle.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-2.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-2.png"></a>
                     <p class="gallery__title">Ship in a bottle</p>
                     <p class="gallery__price"><strong>155$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="185"><a href="steamboat-willy.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-3.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-3.png"></a>
                     <p class="gallery__title">Steamboat Willy</p>
                     <p class="gallery__price"><strong>185$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="dinosaur-bones.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-4.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-4.png"></a>
                     <p class="gallery__title">Dinosaur bones</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="165"><a href="ghost-hunters.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-5.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-5.png"></a>
                     <p class="gallery__title">Ghost Hunters</p>
                     <p class="gallery__price"><strong>165$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="225"><a href="the-beatles-yellow-submarine.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-6.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-6.png"></a>
                     <p class="gallery__title">The beatles: Yellow submarine</p>
                     <p class="gallery__price"><strong>225$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="500"><a href="pirates-of-barrakuda-bay.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-7.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-7.png"></a>
                     <p class="gallery__title">Pirates of Barrakuda Bay</p>
                     <p class="gallery__price"><strong>500$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="325"><a href="home-alone.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-8.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-8.png"></a>
                     <p class="gallery__title">Home Alone - One at home</p>
                     <p class="gallery__price"><strong>325$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="420"><a href="old-fishing-stor.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-9.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-9.png"></a>
                     <p class="gallery__title">Old fishing store</p>
                     <p class="gallery__price"><strong>420$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="250"><a href="globe.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-10.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-10.png"></a>
                     <p class="gallery__title">Globe</p>
                     <p class="gallery__price"><strong>250$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="280"><a href="typewriter.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-11.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-11.png"></a>
                     <p class="gallery__title">Typewriter</p>
                     <p class="gallery__price"><strong>280$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="460"><a href="lion-knights'-castle.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-12.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-12.png"></a>
                     <p class="gallery__title">Lion Knights' Castle</p>
                     <p class="gallery__price"><strong>460$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="185"><a href="star-night.html">
-                    <img class="gallery__img" src="img/ideas/ideas-img-13.png">
+                    <img class="gallery__img" src="img/ideas/ideas-img-13.png"></a>
                     <p class="gallery__title">Vincent Van Gogh: Star night</p>
                     <p class="gallery__price"><strong>185$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
