--- a/marvel.html
+++ b/marvel.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="165"><a href="helicarrier.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-1.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-1.png"></a>
                     <p class="gallery__title">Helicarrier</p>
                     <p class="gallery__price"><strong>165$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="145"><a href="assault-on-avengers-tower.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-2.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-2.png"></a>
                     <p class="gallery__title">Assault on Avengers Tower</p>
                     <p class="gallery__price"><strong>145$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="80"><a href="iron-man-lab.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-3.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-3.png"></a>
                     <p class="gallery__title">Iron Man Lab</p>
                     <p class="gallery__price"><strong>80$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="50"><a href="sanctum-workshop.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-4.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-4.png"></a>
                     <p class="gallery__title">Spider-Man Sanctum Workshop</p>
                     <p class="gallery__price"><strong>50$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="385"><a href="daily-bugle-edition.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-5.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-5.png"></a>
                     <p class="gallery__title">Daily Bugle Edition</p>
                     <p class="gallery__price"><strong>385$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="avengers-tower-battle.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-6.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-6.png"></a>
                     <p class="gallery__title">Avengers Tower Battle</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="240"><a href="the-last-stand.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-7.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-7.png"></a>
                     <p class="gallery__title">The Last Stand of the Web Warriors</p>
                     <p class="gallery__price"><strong>240$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="75"><a href="avengers-base-battle.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-8.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-8.png"></a>
                     <p class="gallery__title">Avengers Base Battle</p>
                     <p class="gallery__price"><strong>75$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="60"><a href="black-widow.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-9.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-9.png"></a>
                     <p class="gallery__title">Black Widow Helicopter Chase</p>
                     <p class="gallery__price"><strong>60$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="80"><a href="spider-man-lair.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-10.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-10.png"></a>
                     <p class="gallery__title">Attack on Spider-Man's Lair</p>
                     <p class="gallery__price"><strong>80$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="190"><a href="airport-battle.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-11.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-11.png"></a>
                     <p class="gallery__title">Airport Battle</p>
                     <p class="gallery__price"><strong>190$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="65"><a href="thanos-the-last-stand.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-12.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-12.png"></a>
                     <p class="gallery__title">Thanos - The Last Stand</p>
                     <p class="gallery__price"><strong>65$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="75"><a href="infinity-gauntlet.html">
-                    <img class="gallery__img" src="img/marvel/marvel-img-13.png">
+                    <img class="gallery__img" src="img/marvel/marvel-img-13.png"></a>
                     <p class="gallery__title">Infinity Gauntlet</p>
                     <p class="gallery__price"><strong>75$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
