--- a/ninjago.html
+++ b/ninjago.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="90"><a href="vulcan.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-1.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-1.png"></a>
                     <p class="gallery__title">Garmadon's Lair at the Volcano's Vulcan</p>
                     <p class="gallery__price"><strong>90$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="310"><a href="ninjago-city-gardens.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-2.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-2.png"></a>
                     <p class="gallery__title">Ninjago City Gardens</p>
                     <p class="gallery__price"><strong>310$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="35"><a href="mechanical-titan.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-3.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-3.png"></a>
                     <p class="gallery__title">Lloyd's Mechanical Titan</p>
                     <p class="gallery__price"><strong>35$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="120"><a href="endless-sea-temple.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-4.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-4.png"></a>
                     <p class="gallery__title">Endless Sea Temple</p>
                     <p class="gallery__price"><strong>120$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="250"><a href="destiny's-bounty.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-5.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-5.png"></a>
                     <p class="gallery__title">Destiny's Bounty</p>
                     <p class="gallery__price"><strong>250$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="330"><a href="sticks.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-6.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-6.png"></a>
                     <p class="gallery__title">Sticks</p>
                     <p class="gallery__price"><strong>330$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="140"><a href="lighthouse-siege.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-7.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-7.png"></a>
                     <p class="gallery__title">Lighthouse Siege</p>
                     <p class="gallery__price"><strong>140$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="130"><a href="golden-ultra-dragon.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-8.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-8.png"></a>
                     <p class="gallery__title">Lloyd's Golden Ultra Dragon</p>
                     <p class="gallery__price"><strong>130$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="220"><a href="port-ninjago.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-9.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-9.png"></a>
                     <p class="gallery__title">Port Ninjago City</p>
                     <p class="gallery__price"><strong>220$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="80"><a href="temple-of-airjitzu.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-10.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-10.png"></a>
                     <p class="gallery__title">Temple of Airjitzu</p>
                     <p class="gallery__price"><strong>80$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="150"><a href="spinjitzu-temple.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-11.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-11.png"></a>
                     <p class="gallery__title">Spinjitzu Temple</p>
                     <p class="gallery__price"><strong>150$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="270"><a href="castle-of-the-cursed-emperor.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-12.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-12.png"></a>
                     <p class="gallery__title">Castle of the Cursed Emperor</p>
                     <p class="gallery__price"><strong>270$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="100"><a href="imperial-temple-of-madness.html">
-                    <img class="gallery__img" src="img/ninjago/ninjago-img-13.png">
+                    <img class="gallery__img" src="img/ninjago/ninjago-img-13.png"></a>
                     <p class="gallery__title">Imperial Temple of Madness</p>
                     <p class="gallery__price"><strong>100$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
