--- a/star-wars.html
+++ b/star-wars.html
@@ -62,70 +62,109 @@
             </div>
             <div class="gallery__box" id="products">
                 <div class="gallery__item" data-price="260"><a href="darth-vader's-castle.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-1.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-1.png"></a>
                     <p class="gallery__title">Darth Vader's Castle</p>
                     <p class="gallery__price"><strong>260$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="375"><a href="mos-eisley-cantina.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-2.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-2.png"></a>
                     <p class="gallery__title">Mos Eisley Cantina</p>
                     <p class="gallery__price"><strong>375$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="275"><a href="imperial-cruiser.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-3.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-3.png"></a>
                     <p class="gallery__title">Light Imperial Cruiser</p>
                     <p class="gallery__price"><strong>275$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="400"><a href="tantive-iv.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-4.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-4.png"></a>
                     <p class="gallery__title">Tantive IV</p>
                     <p class="gallery__price"><strong>400$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="440"><a href="imperial-landing-ship.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-5.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-5.png"></a>
                     <p class="gallery__title">Imperial Landing Ship</p>
                     <p class="gallery__price"><strong>440$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="165"><a href="death-star-last-stand.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-6.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-6.png"></a>
                     <p class="gallery__title">Death Star Last Stand</p>
                     <p class="gallery__price"><strong>165$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="155"><a href="razor-blade.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-7.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-7.png"></a>
                     <p class="gallery__title">Razor Blade</p>
                     <p class="gallery__price"><strong>155$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="185"><a href="command-shuttle.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-8.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-8.png"></a>
                     <p class="gallery__title">Kylo Ren Command Shuttle</p>
                     <p class="gallery__price"><strong>185$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="250"><a href="slave-i.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-9.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-9.png"></a>
                     <p class="gallery__title">Slave I</p>
                     <p class="gallery__price"><strong>250$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="260"><a href="resistance-x-wing-fighter.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-10.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-10.png"></a>
                     <p class="gallery__title">Resistance X-Wing Fighter</p>
                     <p class="gallery__price"><strong>260$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="300"><a href="tydirium-imperial-shuttle.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-11.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-11.png"></a>
                     <p class="gallery__title">Tydirium Imperial Shuttle</p>
                     <p class="gallery__price"><strong>300$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="380"><a href="armored-vehicle.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-12.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-12.png"></a>
                     <p class="gallery__title">All Terrain Armored Vehicle AT-AT</p>
                     <p class="gallery__price"><strong>380$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
                 <div class="gallery__item" data-price="120"><a href="y-wing-rebel-starfighter.html">
-                    <img class="gallery__img" src="img/star-wars/sw-img-13.png">
+                    <img class="gallery__img" src="img/star-wars/sw-img-13.png"></a>
                     <p class="gallery__title">Y-Wing Rebel Starfighter</p>
                     <p class="gallery__price"><strong>120$</strong></p>
-                </a></div>
+                    <div class="gallery__button">
+                        <button class="add__to__cart">Add to cart</button>  
+                    </div>
+                </div>
             </div>
             <div class="load__more">
                 <button class="load__button" type="button">Load more</button>
